scripts/nullaway/annotator/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8.txt
../annotator/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/elliptic/ECPoint.java:54: error: [NullAway] initializer method does not guarantee @NonNull fields x (line 17), y (line 17) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public ECPoint(byte[] bytes, EllipticCurve mother) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/elliptic/ECPoint.java:129: error: [NullAway] returning @Nullable expression from method with @NonNull return type
	    return null;
	    ^
    (see http://t.uber.com/nullaway )
../annotator/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/elliptic/ECPoint.java:140: error: [NullAway] dereferenced expression result.times256() is @Nullable
		    result = result.times256().add(fastcache[coefb[i]&255]);
		                              ^
    (see http://t.uber.com/nullaway )
../annotator/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/elliptic/ECPoint.java:157: error: [NullAway] returning @Nullable expression from method with @NonNull return type
	    return null;
	    ^
    (see http://t.uber.com/nullaway )
../annotator/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/elliptic/ECPoint.java:170: error: [NullAway] returning @Nullable expression from method with @NonNull return type
	    return null;
	    ^
    (see http://t.uber.com/nullaway )
../annotator/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/elliptic/EllipticCurve.java:35: error: [NullAway] initializer method does not guarantee @NonNull fields order (line 16), generator (line 17) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public EllipticCurve(BigInteger a, BigInteger b, BigInteger p) throws InsecureCurveException {
           ^
    (see http://t.uber.com/nullaway )
../annotator/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/server/RevocationManager.java:101: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return this.revocList.get(index);
		^
    (see http://t.uber.com/nullaway )
../annotator/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/server/OpeningManager.java:44: error: [NullAway] initializer method does not guarantee @NonNull fields opk (line 40), osk (line 41) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public OpeningManager(IssuingManager issue, RevocationManager revoc){
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/server/OpeningManager.java:118: error: [NullAway] dereferenced expression mpk is @Nullable
				if(mpk.geth().getx().compareTo(S1.getx()) == 0 && mpk.geth().gety().compareTo(S1.gety()) == 0){
				      ^
    (see http://t.uber.com/nullaway )
../annotator/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/client/User.java:51: error: [NullAway] initializer method does not guarantee @NonNull fields msk (line 40), mpk (line 41) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public User(String pseudo, IssuingManager issue, OpeningManager open, RevocationManager revoc){
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urla42f49a9b2_dpjayasekara_crypthouse_tgz-pJ8-vehiclesc_VehicleSCJ8/src/groupsignature/client/Verifier.java:69: error: [NullAway] dereferenced expression signature is @Nullable
			ECPoint E0 = new ECPoint(ec,signature.getE0().getx(),signature.getE0().gety());
			                                     ^
    (see http://t.uber.com/nullaway )
11 errors
